--- a/activate.html
+++ b/activate.html
@@ -95,7 +95,7 @@
 			elementPhone.disabled = true;
 				
 			
-			fetch('http://127.0.0.1:5000/account_management/activate', {
+			fetch('https://reminder.mosesjasi.tk/account_management/activate', {
 					method: 'POST',
 					headers:{
 						'Content-Type':'application/json',
