--- a/register.html
+++ b/register.html
@@ -147,7 +147,7 @@
 				elementDOB.disabled = true;
 				elementTerms.disabled = true;
 			
-				fetch('http://127.0.0.1:5000/reminder_membership/registration', {
+				fetch('https://reminder.mosesjasi.biz/reminder_membership/registration', {
 					method: 'POST',
 					headers:{
 						'Content-Type':'application/json',
